@startuml

abstract class WebSite{
    +{abstract} void use(User user)
}
note top: 享元模式中的抽象享元角色
class ConcreteWebSite{
    +void use(User user)
    -String type
}
note right: 享元模式中具体的享元角色，type：内部状态
WebSite <|-- ConcreteWebSite
class User{
    -String name
    +void getName()
    +User(String name)
}
note left:享元模式中的外部状态
WebSite ..>User
ConcreteWebSite ..>User
class WebSiteFactory{
    {static} -WebSiteFactory webSiteFactory
    {static} +WebSiteFactory getInstance()
    +WebSite getWebSite(String type)
    - HashMap<String,WebSite> webSiteMap
    +int WebSiteSize()
}
note top:享元工厂
WebSiteFactory o-- WebSite
class Client
Client ..> WebSiteFactory
Client ..> User
Client ..> ConcreteWebSite
@enduml